<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signIn"
        android:layout_width="127dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="600dp"
        android:text="@string/signIn"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/doctor"
        android:layout_width="197dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signin1" />

    <ImageView
        android:id="@+id/patientImg"
        android:layout_width="169dp"
        android:layout_height="175dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signin2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_marginStart="170dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/patientImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle_shape" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/patientImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle_shape" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor"
        app:srcCompat="@drawable/circle_shape" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="14dp"
        android:layout_height="15dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/patientImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctor"
        app:srcCompat="@drawable/circle_shape" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="266dp"
        android:layout_marginStart="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/clinic"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="370dp"
            android:layout_height="77dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/green"
            android:ellipsize="end"
            android:fontFamily="@font/inter"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/clinic"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:strokeColor="@color/popup"
            app:strokeWidth="2dp" />

        <Button
            android:id="@+id/patient"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="370dp"
            android:layout_height="77dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:ellipsize="end"
            android:fontFamily="@font/inter"
            android:text="@string/patient"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:strokeColor="@color/popup"
            app:strokeWidth="2dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>